@@ -6,6 +6,7 @@ Version 0.8
  logger: Make newline configurable
  obdsim: Initial add of fltk gui generator
  logger: Add option to daemonise
+ obdsim: Add mode to all getvalue module calls
 
 Version 0.7 (released 2009-06-25)
  Initial add of new module, obdsim
